# sy40-exs

./: .gitignore  CMakeLists.txt  README.md
src/: assert.h  async.h  lfork.h  port.c  semaphores.h  utils.c
src/td3/: main.c
src/tp1/: PereFils.c  PereFils2.c  Prg1.c  Prg2ter.c
src/tp2/: child_exec.c  child_exec_c.c  dual_fork.c  fork_exec.c  prg3_apres.c  prg3_avant.c
src/tp3/: prg0.c  prg1.c  prg2Ter.c  prg3.c  prg4.c
src/tp4/: prg1.c  prg3.c  prg4.c  prg4bis.c  prg5.c  sleep.c
src/tp5/: prg1.c  prg2.c
src/tp6/: prg2.c
src/tp7/: prg1.c  prg3.c
src/tp8/: coiffeur.c
